# ecommerce-data-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  snowflake_setup.md
airflow/dags/: ecommerce_dag.py
airflow/scripts/: extract.py  process.py
assets/diagrams/: .$ecom 17.24.51.drawio.bkp  ecom.drawio  ecommerce.drawio
dbt_ecommerce/: .gitignore  dbt_project.yml  profiles.yml  pyproject.toml
dbt_ecommerce/models/landing/: sources.yml
dbt_ecommerce/models/marts/dim/: dim_customers.sql  dim_product_category_name_translation.sql  dim_products.sql  dim_sellers.sql
dbt_ecommerce/models/marts/fact/: fact_order_items.sql  fact_order_payments.sql  fact_order_reviews.sql
dbt_ecommerce/models/staging/: stg_customers.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_product_category_name_translation.sql  stg_products.sql  stg_sellers.sql
dbt_ecommerce/seeds/: dim_dates.csv
dbt_ecommerce/snapshots/: scd_customers.sql  scd_products.sql  scd_sellers.sql
docker/spark-app/: load.py
