[project]
name = "ecommerce-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.2",
    "boto3>=1.38.42",
    "dbt-core>=1.10.2",
    "dbt-snowflake>=1.9.4",
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "pymupdf>=1.26.1",
    "pyspark==3.3.0",
]
